fixing navbar spacing

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -58,7 +58,7 @@
     position: relative;
     right: 65px;
     margin-right: -120px;
-    top:3px;
+    top:4px;
     padding: 0px 0px 0px 0px;
     height: 38px;
     width: 40px;
